# ErisPulse-XiaomiMarathon

./: .gitignore  LICENSE  README.md  pyproject.toml
ErisPulse_XiaomiMarathon/: Core.py  __init__.py
