[project]
name = "ErisPulse-XiaomiMarathon"
version = "1.0.0"
description = "小米马拉松模拟器"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [ { name = "wsu2059q", email = "wsu2059@qq.com" } ]

dependencies = [
]

[project.urls]
"homepage" = "https://github.com/wsu2059q/ErisPulse-XiaomiMarathon"

[project.entry-points."erispulse.module"]
"XiaomiMarathon" = "ErisPulse_XiaomiMarathon:Main"
